--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,17 @@ after_success:
     - docker push boy78111947/multi-nginx
     - docker push boy78111947/multi-server
     - docker push boy78111947/multi-worker
+
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-us-east-2-222889081882
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+
